--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,10 @@ body{
     font-size: 1.8rem;
   }
 
+  section{
+    margin-bottom: 4rem;
+  }
+
   .hero{
     color: #f7c600;
     height: 100vh;
@@ -127,17 +131,26 @@ body{
     }
 
     p{
-      border-left: #f7c600 solid 4px;
+      border-left: #f7c600 solid 2px;
       padding-left: 1rem;
     }
+  }
+
+  #nav-helper{
+    margin-top: 5rem;
+
+  }
+
+  .img-responsive{
+    width: 100%;
   }
 
   .hearts{
     width: 100%;
     height: 100%;
 
-    $base-heart-height: 100px;
-    $margin-top: #{$base-heart-height / 3};
+    $base-heart-height: 50%;
+    $margin-top: #{$base-heart-height / 5};
 
     .heart{
       background: url('assets/heart.svg') no-repeat center;
@@ -154,18 +167,18 @@ body{
       }
 
       &:nth-of-type(2){
-        margin-top: -$base-heart-height * 1.25;
-        left: calc(200px/1.7);
+        margin-top: -$base-heart-height * 0.75;
+        left: $base-heart-height / 1.65;
       }
 
       &:last-of-type{
-        margin-top: -$base-heart-height;
-        right: calc(200px/1.7);
+        margin-top: -$base-heart-height * 0.7;
+        right: $base-heart-height / 1.65;
 
       }
 
       &.heart--large{
-        height: $base-heart-height * 1.75;
+        height: $base-heart-height * 1.5;
       }
     }
 
