--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
   src: url('assets/fonts/2C8F17_0_0.eot');
   src: url('assets/fonts/2C8F17_0_0.eot?#iefix') format("embedded-opentype"),url('assets/fonts/2C8F17_0_0.woff2') format("woff2"),url('assets/fonts/2C8F17_0_0.woff') format("woff"),url('assets/fonts/2C8F17_0_0.ttf') format("truetype");
   font-weight: 400;
-  font-style: normal
+  font-style: normal;
 }
 
 @font-face {
@@ -27,9 +27,23 @@
 body{
   background: #092129;
   font-family: CreightonPro-Book,Helvetica,Arial,sans-serif;
-  font-size: 1.2rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.4rem;
+  letter-spacing: .025rem;
+  overflow-x: hidden;
+  font-weight: 400;
+  line-height: 1.4;
 
-  h1, h2, h3, h4{
+  a{
+    color: #f7c600;
+
+    &:hover, &:visited, &:focus, &:active{
+      color: #ffd735;
+    }
+  }
+
+  h1, h2, h3, h4, h5{
     font-family: 'Thingbats', 'Raleway', Helvetica, Arial, sans-serif;
   }
 
@@ -39,153 +53,114 @@ body{
   }
 
   h1{
-    font-size: 3.5rem;
-    color: #f7c600;
+    font-size: 3rem;
   }
 
   h2{
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
 
   h3{
-    font-size: 2.1rem;
+    font-size: 2rem;
   }
 
   h4{
     font-size: 1.8rem;
   }
 
-  section{
-    margin-bottom: 4rem;
+  h5{
+    font-size: 1.5rem;
   }
 
-  .hero{
-    color: #f7c600;
-    height: 100vh;
-    width: 100%;
-    max-width: 100%;
-    max-height: 100vh;
-    overflow: hidden;
-    padding: 0;
-    //position: absolute;
-    //top: 0;
-
+  @include media-breakpoint-up(md){
     h1{
-      padding-top: 4rem;
+      font-size: 3.3rem;
     }
-
-    .hero--footer{
-      width: 100%;
-      position: absolute;
-      bottom: 4rem;
-    }
-
-    .btn-hero{
-      background: url('assets/CTA-button_80px.png') no-repeat center center;
-      background-size: contain;
-      height: 65px;
-      width: 65px;
-      border-radius: 50%;
-      border: none;
-      transition: box-shadow 0.3s;
-      outline: none;
-
-      &:hover{
-        cursor: pointer;
-        box-shadow: rgba(247, 198, 0, 0.79) 0 0 0 3px;
-      }
-
-    }
-
-    .parallax{
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-    }
-
-    #parallax-1{
-      background: url('assets/play-star.png') no-repeat center top;
-      background-size: 40% auto;
-    }
-
-    #parallax-2{
-      background: url('assets/sofa.png') no-repeat center bottom;
-      background-size: 100% auto;
-    }
-
-    .hero-bg{
-      background: url('assets/starry-sky.png') repeat-x;
-      background-size: calc(100% + 60px);
-      height: 100%;
-    }
-  }
-
-  .block-quote{
-    border-left: 4px;
-    text-align: left;
-    padding: 2rem;
 
     h2{
-      padding-left: 1rem;
+      font-size: 2.4rem;
     }
 
-    p{
-      border-left: #f7c600 solid 2px;
-      padding-left: 1rem;
+    h3{
+      font-size: 2.1rem;
+    }
+
+    h4{
+      font-size: 1.8rem;
+    }
+
+    h5{
+      font-size: 1.5rem;
     }
   }
 
-  #nav-helper{
-    margin-top: 5rem;
+  @include media-breakpoint-up(lg){
+    h1{
+      font-size: 4rem;
+    }
+  }
 
+  section{
+    margin-bottom: 4rem;
+
+    &:last-of-type{
+      margin-bottom: 0;
+    }
+  }
+
+  .btn-group{
+
+    > .btn{
+      padding: 0.8rem 1rem;
+      font-size: 1.1rem;
+    }
+
+    @include media-breakpoint-up(sm){
+      > .btn{
+        padding: 1rem 2rem;
+        font-size: 1.5rem;
+      }
+    }
+
+    > .btn:not(:last-child){
+      border-right: solid #1e86a4 3px;
+
+      &:hover, &:active, &:focus, &.active{
+        border-right: solid #1e86a4 3px;
+      }
+    }
+  }
+
+  .btn{
+    font-family: CreightonPro-Book,Helvetica,Arial,sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    display: inline-block;
+    margin-bottom: .625em;
+    outline: 0 none;
+    padding: .5em 3em;
+    width: auto;
+    text-transform: uppercase;
+    text-decoration: none !important;
+    border-radius: 2em;
+    border: none;
+    cursor: pointer;
+
+    &.btn-primary{
+      background: #f7c600;
+      color: #333;
+
+      &:hover, &:active, &:focus, &.active{
+        background: #ffd735;
+        color: #333;
+        outline: none;
+        box-shadow: none;
+      }
+    }
   }
 
   .img-responsive{
     width: 100%;
-  }
-
-  .hearts{
-    width: 100%;
-    height: 100%;
-
-    $base-heart-height: 50%;
-    $margin-top: #{$base-heart-height / 5};
-
-    .heart{
-      background: url('assets/heart.svg') no-repeat center;
-      height: $base-heart-height;
-      top: $margin-top;
-      width: auto;
-      margin: 0 auto;
-      position: relative;
-      z-index: 2;
-
-      &:not(:first-of-type){
-        z-index: 1;
-        width: $base-heart-height;
-      }
-
-      &:nth-of-type(2){
-        margin-top: -$base-heart-height * 0.75;
-        left: $base-heart-height / 1.65;
-      }
-
-      &:last-of-type{
-        margin-top: -$base-heart-height * 0.7;
-        right: $base-heart-height / 1.65;
-
-      }
-
-      &.heart--large{
-        height: $base-heart-height * 1.5;
-      }
-    }
-
-  }
-
-  .selected-box{
-
   }
 
   @keyframes mini-bounce {
@@ -214,9 +189,41 @@ body{
     }
   }
 
+  @keyframes mini-bounce-jump {
+    5% {
+      transform: translate(0px, -10px);
+    }
+
+    7% {
+      transform: translate(0px, 0px);
+    }
+
+    10% {
+      transform: translate(0px, -5px);
+    }
+
+    12% {
+      transform: translate(0px, 0px);
+    }
+
+    15% {
+      transform: translate(0px, 2px);
+    }
+
+    50% {
+      transform: translate(0px, 0px);
+    }
+  }
+
   .mini-bounce {
     animation-duration: 3s;
     animation-name: mini-bounce;
+    transform-origin: center center;
+  }
+
+  .mini-bounce-jump {
+    animation-duration: 5s;
+    animation-name: mini-bounce-jump;
     transform-origin: center center;
   }
 
@@ -231,6 +238,6 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #d3d3d3;
+  color: #ececec;
   height: 3000px;
 }
