--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,133 +24,150 @@
   font-style: normal
 }
 
-body{
-  background: #092129;
-  font-family: CreightonPro-Book,Helvetica,Arial,sans-serif;
+.why-ownit {
+  font-family: 'CreightonPro-Book', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.4rem;
-  letter-spacing: .025rem;
+  text-align: center;
+  color: #ececec !important;
+  background: #092129;
+  font-size: 1.2em !important;
+  letter-spacing: .020em;
   overflow-x: hidden;
   font-weight: 400;
   line-height: 1.4;
 
-  a{
-    color: #f7c600;
+  p{
+    color: #ececec !important;
+    font-size: 1.2em;
+  }
 
-    &:hover, &:visited, &:focus, &:active{
-      color: #ffd735;
+  a {
+    color: #f7c600 !important;
+
+    &:hover, &:visited, &:focus, &:active {
+      color: #ffd735 !important;
     }
   }
 
-  h1, h2, h3, h4, h5{
-    font-family: 'Thingbats', 'Raleway', Helvetica, Arial, sans-serif;
+  h1, h2, h3, h4, h5 {
+    font-family: 'Thingbats', 'Raleway', Helvetica, Arial, sans-serif !important;
   }
 
-  h1, h2, h3{
-    text-transform: uppercase;
-    color: #f7c600;
+  h1, h2, h3 {
+    text-transform: uppercase !important;
+    color: #f7c600 !important;
   }
 
-  h1{
-    font-size: 2.8rem;
+  h1 {
+    font-size: 2.6em !important;
   }
 
-  h2{
-    font-size: 2.1rem;
+  h2 {
+    font-size: 1.9em !important;
   }
 
-  h3{
-    font-size: 1.9rem;
+  h3 {
+    font-size: 1.7em !important;
   }
 
-  h4{
-    font-size: 1.8rem;
+  h4 {
+    font-size: 1.6em !important;
   }
 
-  h5{
-    font-size: 1.5rem;
+  h5 {
+    font-size: 1.3em !important;
+    color: #f7c600 !important;
   }
 
-  @include media-breakpoint-up(md){
-    h1{
-      font-size: 3rem;
+  @include media-breakpoint-up(md) {
+    h1 {
+      font-size: 2.8em !important;
     }
 
-    h2{
-      font-size: 2.4rem;
+    h2 {
+      font-size: 2.2em !important;
     }
 
-    h3{
-      font-size: 2.1rem;
+    h3 {
+      font-size: 1.9em !important;
     }
 
-    h4{
-      font-size: 1.8rem;
+    h4 {
+      font-size: 1.6em !important;
     }
 
-    h5{
-      font-size: 1.5rem;
-    }
-  }
-
-  @include media-breakpoint-up(lg){
-    h1{
-      font-size: 4rem;
+    h5 {
+      font-size: 1.3em !important;
     }
   }
 
-  section{
-    margin-bottom: 4rem;
+  @include media-breakpoint-up(lg) {
+    h1 {
+      font-size: 3.2em !important;
+    }
+  }
 
-    &:last-of-type{
+  section {
+    margin-bottom: 3.8em;
+
+    &:last-of-type {
       margin-bottom: 0;
     }
   }
 
-  .btn-group{
+  .btn-group {
 
-    > .btn{
-      padding: 0.8rem 1rem;
-      font-size: 1.1rem;
+    > .btn {
+      padding: 0.6em 0.8em;
+      font-size: 1.1em !important;
     }
 
-    @include media-breakpoint-up(sm){
-      > .btn{
-        padding: 1rem 2rem;
-        font-size: 1.5rem;
+    @include media-breakpoint-up(sm) {
+      > .btn {
+        padding: 0.8em 1.8em;
+        font-size: 1.3em !important;
       }
     }
 
-    > .btn:not(:last-child){
+    > .btn:not(:last-child) {
       border-right: solid #1e86a4 3px;
 
-      &:hover, &:active, &:focus, &.active{
+      &:hover, &:active, &:focus, &.active {
         border-right: solid #1e86a4 3px;
       }
     }
   }
 
-  .btn{
-    font-family: CreightonPro-Book,Helvetica,Arial,sans-serif;
-    font-size: 1.4rem;
+  .btn {
+    line-height: 1.25;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    transition: all 0.2s ease-in-out;
+    font-family: CreightonPro-Book, Helvetica, Arial, sans-serif;
+    font-size: 1.0em !important;
     font-weight: 400;
     display: inline-block;
-    margin-bottom: .625em;
+    margin-bottom: .605em;
     outline: 0 none;
-    padding: .5em 3em;
+    padding: .4em 3em;
     width: auto;
     text-transform: uppercase;
     text-decoration: none !important;
-    border-radius: 2em;
+    border-radius: 1.6em;
     border: none;
     cursor: pointer;
 
-    &.btn-primary{
+    &.btn-primary {
       background: #f7c600;
       color: #333;
 
-      &:hover, &:active, &:focus, &.active{
+      &:hover, &:active, &:focus, &.active {
         background: #ffd735;
         color: #333;
         outline: none;
@@ -159,7 +176,7 @@ body{
     }
   }
 
-  .img-responsive{
+  .img-responsive {
     width: 100%;
   }
 
@@ -227,17 +244,7 @@ body{
     transform-origin: center center;
   }
 
-  .slow{
+  .slow {
     animation-duration: 2s;
   }
-
-}
-
-#app {
-  font-family: 'CreightonPro-Book', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #ececec;
-  height: 3000px;
 }
