--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,15 @@
   font-style: normal
 }
 
+html{
+  font-size: 62.5%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body{
+  font-size: 1.9em;
+}
+
 .why-ownit {
   font-family: 'CreightonPro-Book', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -31,7 +40,7 @@
   text-align: center;
   color: #ececec !important;
   background: #092129;
-  font-size: 1.2em !important;
+  font-size: 1.0em !important;
   letter-spacing: .020em;
   overflow-x: hidden;
   font-weight: 400;
@@ -40,6 +49,8 @@
   p{
     color: #ececec !important;
     font-size: 1.2em;
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
 
   a {
@@ -65,6 +76,8 @@
 
   h2 {
     font-size: 1.9em !important;
+    margin-bottom: 0.5rem;
+    line-height: 1.1;
   }
 
   h3 {
@@ -110,6 +123,8 @@
 
   section {
     margin-bottom: 3.8em;
+    padding: 0;
+    color: #ececec;
 
     &:last-of-type {
       margin-bottom: 0;
@@ -119,13 +134,13 @@
   .btn-group {
 
     > .btn {
-      padding: 0.6em 0.8em;
+      padding: 0.4em 0.8em;
       font-size: 1.1em !important;
     }
 
     @include media-breakpoint-up(sm) {
       > .btn {
-        padding: 0.8em 1.8em;
+        padding: 0.5em 1.5em;
         font-size: 1.3em !important;
       }
     }
@@ -150,10 +165,10 @@
     user-select: none;
     transition: all 0.2s ease-in-out;
     font-family: CreightonPro-Book, Helvetica, Arial, sans-serif;
-    font-size: 1.0em !important;
+    font-size: 1.1em !important;
     font-weight: 400;
     display: inline-block;
-    margin-bottom: .605em;
+    margin: 1em 0;
     outline: 0 none;
     padding: .4em 3em;
     width: auto;
